include_directories(.)

# ===========================================================================
# ===== 源代码、头文件、窗口文件以及资源文件自动寻址 ================================
# ===========================================================================
file(GLOB_RECURSE PROJECT_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
file(GLOB_RECURSE PROJECT_HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/headers/*.h)

# ===========================================================================
# ===== 正则表达式 - 得到当前目录名字 ===========================================
# ===========================================================================
string(REGEX REPLACE ".*/(.*)" "\\1" DIR_NAME ${CMAKE_CURRENT_SOURCE_DIR})

# ===========================================================================
# ===== 编译、链接、运行 =======================================================
# ===========================================================================
add_executable(CPP_${DIR_NAME}
        ${PROJECT_SOURCES}
        ${PROJECT_HEADERS})
